kube/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: api
    spec:
      containers:
      - name: api
        image: kuberepodemo.azurecr.io/api:latest
        imagePullPolicy: Always
        ports:
         - containerPort: 80
      imagePullSecrets:
         - name: acr-auth
