kube/frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - name: frontend
        image: kuberepodemo.azurecr.io/fe:latest
        imagePullPolicy: Always
        ports:
         - containerPort: 80
      imagePullSecrets:
         - name: acr-auth
