kube/mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        imagePullPolicy: Always
        ports:
         - containerPort: 3306
        ports:
        - containerPort: 3306
          name: mysql
