kube/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    run: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: api
