kube/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    run: mysql
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: http
  selector:
    run: mysql
