kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: fe.XXXX.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
  - host: api.XXXX.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 80
        path: /
